@@ -1,3 +1,14 @@
+2005-07-28  Eric Seidel  <eseidel@apple.com>
+
+        Reviewed by ggaren.
+
+        * svg2png/svg2png.m: Added.
+        * svg2png/svg2png.xcodeproj/project.pbxproj: Added.
+        * svg2png/svg2png_Prefix.pch: Added.
+        Added a simple test tool which dumps a PNG from an SVG using
+        WebCore+SVG's SVG rendering support.
+        http://bugzilla.opendarwin.org/show_bug.cgi?id=4156
+
 2005-07-26  Maciej Stachowiak  <mjs@apple.com>
 
         Reviewed by Darin.
